--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,5 +24,5 @@ repositories {
 
 dependencies {
   compile 'com.facebook.react:react-native:0.18.+'
-  compile 'com.paypal.sdk:paypal-android-sdk:2.13.0'
+  compile 'com.paypal.sdk:paypal-android-sdk:2.13.3+'
 }
