--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,6 @@ repositories {
 }
 
 dependencies {
-  compile 'com.facebook.react:react-native:0.18.+'
-  compile 'com.paypal.sdk:paypal-android-sdk:2.14.4'
+  compile 'com.facebook.react:react-native:+'
+  compile 'com.paypal.sdk:paypal-android-sdk:2.16.0'
 }
